# skyportal

./: .bumper.toml  .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  README.md  boot.py  code.py  compile.py  constants.py  pyproject.toml  secrets.py  skyportal_config.py
.github/workflows/: lint_test.yml  release_artifacts.yml
CAD/: README.md  mounting_plate_featherwing.STL  mounting_plate_pyportal.STL  tower_legs.STL  tower_office.STL
CAD/Parametric/: mounting_plate_featherwing.FCStd  mounting_plate_pyportal.FCStd  tower_legs.FCStd
adsblol-proxy/: README.md  adsblol_proxy.py
lib/: README.md  adafruit_touchscreen.mpy  circuitpython_functools.mpy
lib/adafruit_display_shapes/: circle.mpy  line.mpy  polygon.mpy  rect.mpy  roundrect.mpy  triangle.mpy
lib/adafruit_pyportal/: __init__.mpy  graphics.mpy  network.mpy  peripherals.mpy
lib/asyncio/: __init__.mpy  core.mpy
lib_by_platform/featherS3/lib/: circuitpython_base64.mpy
lib_by_platform/pyportal/lib/: circuitpython_functools.mpy
mpy-cross/: README.md  mpy-cross-linux-amd64-9.0.5.static  mpy-cross-linux-amd64-9.2.2.static  mpy-cross-macos-11-8.0.5-arm64  mpy-cross-macos-11-9.0.5-arm64  mpy-cross-macos-11-9.0.5-x64  mpy-cross-macos-9.2.2-arm64  mpy-cross-macos-9.2.2-x64  mpy-cross.static-amd64-linux-8.0.5
skyportal/: adsblol.py  aircraftlib.py  displaylib.py  feather_compat.py  maplib.py  networklib.py  opensky.py  pyportal_compat.py
utils/: README.md  build_map_tile.py
