[tool.poetry]
name = "skyportal"
version = "1.3.0"
description = "A PyPortal based flight tracker"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/skyportal"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Other OS",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^24.0"
bump2version = "^1.0"
flake8 = "^7.0"
flake8-annotations = "^3.0"
isort = "^5.12"
mypy = "^1.0"
pre-commit = "^3.0"
ruff = "^0.5"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "skyportal,tests,secrets"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100
extend_skip = "lib"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["lib", "adsblol-proxy"]

[tool.pyright]
reportShadowedImports = false

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
