[project]
name = "skyportal"
version = "1.3.0"
description = "A PyPortal based flight tracker."
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]
maintainers = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Other OS",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]

requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/skyportal/blob/main/README.md"
Repository = "https://github.com/sco1/skyportal"
Issues = "https://github.com/sco1/skyportal/issues"
Changelog = "https://github.com/sco1/skyportal/blob/main/CHANGELOG.md"

[tool.uv]
dev-dependencies = [
    "black~=24.8",
    "bump2version~=1.0",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "isort~=5.13",
    "mypy~=1.11",
    "pre-commit~=3.8",
    "ruff~=0.6",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "skyportal,tests,secrets"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100
extend_skip = "lib"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["lib", "adsblol-proxy"]

[tool.pyright]
reportShadowedImports = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
