[project]
name = "skyportal"
version = "2.0.0"
description = "A CircuitPython based flight tracker."
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]
maintainers = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Other OS",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]

requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/skyportal/blob/main/README.md"
Repository = "https://github.com/sco1/skyportal"
Issues = "https://github.com/sco1/skyportal/issues"
Changelog = "https://github.com/sco1/skyportal/blob/main/CHANGELOG.md"

[project.scripts]
map_gen = "utils.build_map_tile:main"

[tool.uv]
dev-dependencies = [
    "black~=24.8",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "httpx~=0.28",
    "isort~=5.13",
    "mypy~=1.11",
    "pre-commit~=4.0",
    "python-dotenv~=1.0",
    "ruff~=0.6",
    "sco1-bumper~=1.0",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "skyportal,tests,secrets"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100
extend_skip = "lib"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["lib", "adsblol-proxy"]

[tool.pyright]
reportShadowedImports = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
